<resources>
    <string name="app_name">vSongBook</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_aaa">vSongBook</string>
    <string name="action_settings">Settings</string>
    <string name="type_msg">Type message</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="jackson_siro">© Jackson Siro</string>
    <string name="this_cool">This is a very a Cool Thing that you can do such a ...</string>
    <string name="save_btn">Save A File</string>
    <string name="save_act">Save A File Now!!!</string>
    <string name="db_path">Database path</string>
    <string name="db_name">Database Name</string>
    <string name="file_name">Save as</string>
    <string name="or">or</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="log_in">Log in</string>
    <string name="forgot_my_pwd">I’ve forgotten my password?</string>
    <string name="my_chats">My Chats</string>
    <string name="all_chats">All Chats</string>
    <string name="search">Search</string>
    <string name="to">To:</string>
    <string name="edit">Edit</string>
    <string name="new_chat">New Chat</string>
    <string name="alert_wait">Please wait...</string>
    <string name="err_fields_empty">Please fill all the fields.</string>
    <string name="err_singup">Error occurred while signup:</string>
    <string name="err_login">Error occurred while login:</string>
    <string name="err_users">Error occurred while finding users:</string>
    <string name="alert_loading">Loading...</string>
    <string name="msg_no_user_found">No users found for chat!</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_capital_off">OFF</string>
    <string name="search_label">Songbook</string>
    <string name="search_hint">Search songs</string>
    <string name="menu_search">Search</string>
    <string name="menu_settings">My Settings</string>
    <string name="settings_description">View of songs</string>
    <string name="search_instructions">Use the search box in the Action Bar to look up a song</string>
    <string name="no_results">No songs found with \"%s\"</string>
    <string name="worship_songs">750 Songs of Worship and many more!</string>
    <string name="critical_text">"Sorry vSongBook had to terminate.  \nOur App is free for five days only. If you wish continue using this app without installing it afresh, then kindly pay Ksh. 250 to the developer - Jack Siro \n \nYou can pay via: \n1. M-PESA to 0711474787.  \n2. AirtelMoney to 0731973180.  \n \nFor Personal Assistance: \n i) Call, Text or WhatsApp +254711474787  \nii) Email: smataweb@gmail.com  \niii) Facebook me @ fb.com/jaxila  \niv) Tweet me @JacksonSiro"</string>
    <string name="v_exit">Exit</string>
    <string name="button_ok">OKAY</string>
    <string name="button_start">START</string>
    <string name="button_next">NEXT</string>
    <string name="button_finish">FINISH</string>
    <string name="button_skip">SKIP</string>
    <string name="v_protest">Learn More</string>
    <string name="title_xxx_critical">Upgrade to vSongbook Premium</string>
    <string name="set_show_animation">"Don't show animation"</string>
    <string name="set_show_tutorial">"Don't show tutorial"</string>
    <string name="set_font_size">Song Font Size</string>
    <string name="set_song_preview">Preview of the song text</string>
    <string name="set_settheme">Set Theme:</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="set_song_books">SongBooks to Show:</string>
    <string name="set_believers_songs">Show Believers Songs</string>
    <string name="set_tenzi_za_rohoni">Show Tenzi za Rohoni</string>
    <string name="set_nyimbo_cia_kuinira_ngai">Show Nyimbo cia Kuinira Ngai</string>
    <string name="set_my_own_songs">Show My Own Songs</string>
    <string name="set_startup_showing">On startup:</string>
    <string name="title_activity_settings_i">My Settings</string>
    <string name="title_activity_set_app">vSongBook Settings</string>
    <string name="title_activity_settings_ii">My Profile</string>
    <string name="title_activity_xxx_critical">Upgrade to vSongbook Premium</string>
    <string name="sample_show_log">Show Log</string>
    <string name="sample_hide_log">Hide Log</string>
    <string name="tutorial_activity_title">VSONGBOOK TUTORIAL</string>
    <string name="tutorial_one_content">"God bless you for installing vSongBook on your device. It will turn your a device into a virtual songbook by giving you LYRICS of most songs sung in church. Please go through this tutorial to get much more about vSongBook.  \n\nSWIPE TO THE LEFT TO CONTINUE  \n"</string>
    <string name="tutorial_two_title">SONGBOOKS INSIDE</string>
    <string name="tutorial_two_content">" - Songs of Worship,  \n - Nyimbo za Injili, \n - Believers Songs, \n - Nyimbo za Wokovu, \n - Redemption Songs, \n- Tenzi Za Rohoni, \n - Nyimbo cia Kuinira Ngai (Kikuyu), \n - Mbathi sya Kumutaiia Ngai (Kamba), \n - Che Kilosine Jehovah (Kalenjin)."</string>
    <string name="tutorial_three_title">MAIN FEATURES</string>
    <string name="tutorial_three_content">"1. QUICK SEARCH \nSearch a song either by number, title or words in the song, you don't need to know the song number or title. \n\n2. USER FRIENDLY\n * navigate between songs, \n * adjust font size, \n * share songs to other apps. \n * copy paste songs and much more! \n\n3. MY OWN SONGS (NOTEPAD)  \nSave your own songs or those you get from other sources and sing them when you can whenever you can!\n"</string>
    <string name="tutorial_four_title">SUPPORT THE PROJECT</string>
    <string name="tutorial_four_content">"vSongBook is Free for the first 5 days after which you still wish to continue using it without having to install afresh you will have to pay KES. 250 via M-Pesa to +254711474787 or via AirtelMoney to +254731973180 or paypal to smataweb@gmail.com. You may contact Bro. Jack Siro for Personal Assistance: \n - +254711474787 \n - smataweb@gmail.com \n - Facebook @ fb.me/jaxila \n - Tweet me @JacksonSiro \n"</string>
    <string name="start_singing">Finish</string>
    <string name="menu_notepad">My Own Songs</string>
    <string name="menu_tutorial">View Tutorial</string>
    <string name="menu_helpdesk">The HelpDesk</string>
    <string name="menu_about">About vSongBook</string>
    <string name="menu_share">Share This Song</string>
    <string name="title_activity_help_desk">vSongBook HelpDesk</string>
    <string name="saf_mobile">+254 711 47 47 87</string>
    <string name="air_mobile">+254 731 97 31 80</string>
    <string name="my_email">jacksiro@outlook.com</string>
    <string name="my_facebook">Facebook: @jaxila</string>
    <string name="my_twitter">Twitter: @jacksonsiro</string>
    <string name="my_instagram">Instagram: @jacksonsiro</string>
    <string name="my_skype">Skype: @jackson.siro</string>
    <string name="help_explanation">"If you would like to inquire, complain or recommend on something fell free to contact the developer's helpdesk at any time via any of the following channels."</string>
    <string name="title_activity_about">About vSongBook App</string>
    <string name="about_one">The Virtual SongBook is an Android Application that was first developed on 26th November, 2014 by Brother Jackson Siro of the Kisii Evening Light Church. The purpose of developing this great application is to provide an alternative song book to believers with android devices (mobile phones and tablets) in case they need to use the song book and it is not within their reach.</string>
    <string name="about_two">A Desktop version for the computers using Windows is available. It can be used in church to project songs and has a lot of user centered features like changing font size, font types, themes among other features. You can order a copy by emailing the developer jacksiro@outlook.com. Once you get it you can test it for 2 weeks and after which you can pay KES. 1500 or 15 USD to the developer.</string>
    <string name="about_three">A Windows Phone version is now available on the Windows Phone already. Other improvements are underway so keep praying for us to advance.</string>
    <string name="win_desktop">Windows Desktop Version</string>
    <string name="future_plans">Future Plans</string>
    <string name="favourite_this">Favourite This Song</string>
    <string name="complain_this">Send a Complain</string>
    <string name="live_folder_name">My Songs</string>
    <string name="live_folder_notes">My Songs</string>
    <string name="title_edit_title">Song title:</string>
    <string name="title_create">New song</string>
    <string name="title_edit">Edit: %1$s</string>
    <string name="title_notes_list">Songs</string>
    <string name="menu_add">New note</string>
    <string name="menu_save">Save</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_open">Open</string>
    <string name="menu_revert">Revert changes</string>
    <string name="menu_copy">Copy</string>
    <string name="menu_paste">Paste</string>
    <string name="text_title">Title:</string>
    <string name="resolve_edit">Edit song</string>
    <string name="resolve_title">Edit title</string>
    <string name="error_title">Error</string>
    <string name="error_message">Error loading song</string>
    <string name="welcome_note">God bless you for installing vSongBook on your device. It is Free for the first 5 days after which you will have to pay to continue using it. You may pay right away or wait for the expiry of your trial</string>
    <string name="payment_info">"Pay the developer - Jack Siro:\n 0711474787 M-PESA  \n 0731973180 AirtelMoney \n smataweb@gmail.com Paypal."</string>
    <string name="payment_note">"vSongBook will activate automatically once you receive the confirmation SMS from MPESA or AirtelMoney. If the app does not: \n1. Enable app permissions for vSongBook if the phone is Android 6.0 then request for activation via sms. \n2. Request for activation code"</string>
    <string name="critical_text_v">"Contacts: \n +254 711474787 / 731973180  \n smataweb@gmail.com  \n Facebook.com/jaksiro  \n Twitter.com/jaksiro \n Instagram @jaksiro"</string>
</resources>