<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/scrollView1"
     android:background="#eee" 
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" >
    <LinearLayout android:gravity="center_horizontal"
          android:orientation="vertical"
          android:padding="5dp"
          android:layout_width="match_parent"
          android:layout_height="fill_parent">
        <ImageView android:id="@+id/imageView1"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:src="@drawable/cover"
          android:scaleType="center" />
        
        <LinearLayout 
            android:orientation="vertical"
          	android:background="@drawable/border"
          	android:padding="5dp"
          	android:layout_width="match_parent"
          	android:layout_height="wrap_content"
          	android:layout_margin="5dp">
          	
            <TextView android:textSize="25dp"
	          android:textColor="#000"
	          android:id="@+id/textView1"
	          android:padding="5dp"
	          android:layout_width="match_parent"
	          android:layout_height="wrap_content"
	          android:text="@string/title_activity_about" />
            <TextView android:textSize="20dp"
	          android:textColor="#000"
	          android:id="@+id/textView2"
	          android:padding="5dp"
	          android:layout_width="match_parent"
	          android:layout_height="wrap_content"
	          android:text="@string/about_one" />
        </LinearLayout>
        	<LinearLayout android:orientation="vertical"
	          android:background="@drawable/border"
	          android:padding="5dp"
	          android:layout_width="match_parent"
	          android:layout_height="wrap_content"
	          android:layout_margin="5dp">
            <TextView android:textSize="25dp"
	          android:textColor="#000"
	          android:id="@+id/textView3"
	          android:padding="5dp"
	          android:layout_width="match_parent"
	          android:layout_height="wrap_content"
	          android:text="@string/win_desktop" />
            <TextView android:textSize="20dp"
	          android:textColor="#000"
	          android:id="@+id/textView4"
	          android:padding="5dp"
	          android:layout_width="match_parent"
	          android:layout_height="wrap_content"
	          android:text="@string/about_two" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical"
          android:background="@drawable/border"
          android:padding="5dp"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="5dp">
            <TextView android:textSize="25dp"
	          android:textColor="#000"
	          android:id="@+id/textView5"
	          android:padding="5dp"
	          android:layout_width="match_parent"
	          android:layout_height="wrap_content"
	          android:text="@string/future_plans" />
            <TextView android:textSize="20dp"
	          android:textColor="#000"
	          android:id="@+id/textView6"
	          android:padding="5dp"
	          android:layout_width="match_parent"
	          android:layout_height="wrap_content"
	          android:text="@string/about_three" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
