<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" 
	android:padding="5dp" 
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent" >
	
   <LinearLayout 
            android:orientation="vertical"
        	android:background="@drawable/border"
        	android:padding="5dp"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:layout_margin="5dp">
        	
	          <TextView 
	            android:textSize="20sp"
	         	android:textColor="#000"
	         	android:id="@+id/textView1"
	         	android:padding="5dp"
	            android:autoLink="all"
	         	android:layout_width="match_parent"
	         	android:layout_height="wrap_content"
	         	android:text="@string/welcome_note" />
	      </LinearLayout>
      
      <LinearLayout 
          android:orientation="vertical"
        	android:background="@drawable/border"
        	android:padding="5dp"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:layout_margin="5dp">
        	
          <TextView 
            android:textSize="20sp"
         	android:textColor="#000"
         	android:id="@+id/textView3"
         	android:padding="5dp"
            android:autoLink="all"
         	android:layout_width="match_parent"
         	android:layout_height="wrap_content"
         	android:text="@string/payment_info" />
      </LinearLayout>
      
      <LinearLayout 
          android:orientation="vertical"
        	android:background="@drawable/border"
        	android:padding="5dp"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:layout_margin="5dp">
        	
          <TextView 
            android:textSize="20sp"
         	android:textColor="#000"
         	android:id="@+id/textView4"
         	android:padding="5dp"
            android:autoLink="all"
         	android:layout_width="match_parent"
         	android:layout_height="wrap_content"
         	android:text="@string/payment_note" />
      </LinearLayout>
      
      <LinearLayout 
          android:orientation="vertical"
        	android:background="@drawable/border"
        	android:padding="5dp"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:layout_margin="5dp">
          
          <TextView 
            android:textSize="20sp"
         	android:textColor="#000"
         	android:id="@+id/textView5"
         	android:padding="5dp"
            android:autoLink="all"
         	android:layout_width="match_parent"
         	android:layout_height="wrap_content"
         	android:text="@string/critical_text_v" />
      </LinearLayout>
      
</LinearLayout>
